[package]
name = "nhl-stats-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autosurgeon = "0.6.0"
reqwest = { version = "0.11.17", features = [ "json" ] }
serde = { version = "1.0.160", features = [ "derive" ] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = [ "full" ] }
tui = "0.19.0"
